# Market-Researcher-

./: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  llm.py  main.py  market_agent.py  multi_agent_system.py  news_agent.py  pyproject.toml  requirements.txt  stock_agent.py  supervisor.py  web_app.py
Database/: __init__.py  mongodb.py
agents/: market_agent.py  news_agent.py  stock_agent.py
api/: README.md  database.py  fastapi_database.py  fastapi_main.py  fastapi_models.py  fastapi_routes.py  main.py  models.py  query_history.db  routes.py  run_server.py  test_api.py
config/: config.py  main.py
llm/: __init__.py  llm.py
supervisor/: __init__.py  supervisor.py
